--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": "10.0.0"
+  },
   "author": "Trevor Scott",
   "license": "MIT",
   "dependencies": {
